--- a/.dockerignore
+++ b/.dockerignore
@@ -15,6 +15,7 @@ __pycache__/
 .vscode/
 .idea/
 venv/
+_build/
 docker-compose.build.*.yml
 docker-compose.publish.*.yml
 docker-compose.test.*.yml
